--- a/VideoMonitorApp.plist
+++ b/VideoMonitorApp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ks3-cn-beijing.ksyun.com/sax-zhibo/kpmusicapp/KunPeng.ipa</string>
+					<string>https://github.com/MJMS7654/VideoMonitor/blob/master/VideoMonitorApp.plist</string>
 				</dict>
 			</array>
 			<key>metadata</key>
